infra/kubernetes/platform/cilium/hubble-ui-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: public-api
      namespace: envoy-gateway-system
  hostnames:
    - hubble.mam.jku.internal
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
